# GChannelManager

./: .gitignore  CMakeLists.txt  README.md  README.ru.md
cmake/: GChannelManagerConfig.cmake.in
docs/: 01-Обзор.md  02-Архитектура.md  03-Состояния-и-переходы.md  04-Протокол-и-кодек.md  05-Транспорт.md  06-Gateway-API.md  07-Статистика.md  08-Сборка-и-интеграция.md  09-Тестирование.md  10-Руководство-пользователя.md  README.md
docs/.obsidian/: workspace.json
docs/en/: 01-Overview.md  02-Architecture.md  03-States-and-Transitions.md  04-Protocol-and-Codec.md  05-Transport.md  06-Gateway-API.md  07-Statistics.md  08-Build-and-Integration.md  09-Testing.md  10-User-Guide.md  README.md
docs/ru/: 01-Обзор.md  02-Архитектура.md  03-Состояния-и-переходы.md  04-Протокол-и-кодек.md  05-Транспорт.md  06-Gateway-API.md  07-Статистика.md  08-Сборка-и-интеграция.md  09-Тестирование.md  README.md
examples/: CMakeLists.txt  demo_peer.cpp
fuzz/: CMakeLists.txt  README.md  fuzz_codec.cpp
include/GChannelManager/: DecodedMessage.h  GChannelManager.h  GChannelManager_global.h  Gateway.h  GatewayRequest.h  GatewayStats.h  IMessageCodec.h  ITransport.h  KeepAliveConfig.h  ReplyCacheConfig.h  RetryPolicy.h  SimpleFrameCodec.h  TransportConfig.h
src/: GChannelManager.cpp  Gateway.cpp  SimpleFrameCodec.cpp
src/internal/: KeepAliveMonitor.cpp  KeepAliveMonitor.h  PendingRequests.cpp  PendingRequests.h  SessionHandshake.cpp  SessionHandshake.h  TimerMs.h
tests/: CMakeLists.txt  FakeTransport.h  tst_CodecProperties.cpp  tst_Gateway.cpp  tst_Integration.cpp  tst_SimpleFrameCodec.cpp
